first draft for cross-ui-api